# python-project-49

./: .codeclimate.yml  .gitignore  Makefile  README.md  demo.cast  pyproject.toml
brain_games/: cli(don't use it).py  cli.py  engine.py  even_or_not.py  welcome.py
brain_games/games/: calc.py  even.py  even_or_not.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even(v. 2.0).py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  test.py
brain_games_main/scripts/: brain_games.py
